Fixed gaps at bottom of page

--- a/app/components/game-nav/style.scss
+++ b/app/components/game-nav/style.scss
@@ -1070,9 +1070,12 @@ a.menu-link,a.menu-link:hover {
   }
 }
 
-#desktop-foot-bumper {
-  height: 22px;
+#foot-bumper {
+  height: 12px;
+  @media #{$mobile-wide-and-up} {
+    height: 15px;
+  }
   @media #{$nav-lg} {
-    height: 33px;
+    height: 17px;
   }
 }
